--- a/_data/menu_nav.yml
+++ b/_data/menu_nav.yml
@@ -1,2 +1,12 @@
-- title: Portfolio
-  href: /portfolio/
+- title: Home
+  href: /
+
+- title: Products
+  href: /products/
+
+- title: Customer Service
+  href: /customer-service/
+
+- title: Contact
+  href: /contact/
+
