--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@ description: > # ignore newlines
 # email: 
 
 baseurl: "/FreedomToGO"
-url: ""
+url: "http://commbocc.github.io"
 # paginate: 10
 # paginate_path: "posts/:num"
 
