--- a/_data/questions.yml
+++ b/_data/questions.yml
@@ -1,8 +1,8 @@
 - question: "Why do we need more money for transportation? Are current funds being misspent?"
-  answer: "The reality is that Hillsborough County has just been growing very quickly! Even making the most economical decisions possible, we are unable to stretch current funds far enough to cover the large backlog of transportation needs. Knowing that future population growth is projected to increase even faster, it is clear that the time to act is now."
+  answer: "Hillsborough County has been growing very quickly! Even making economical  funding decisions, we are unable to stretch the budget far enough to cover current transportation needs."
 
 - question: "Are we just picking up the tab for undertaxed developers?"
-  answer: "While there was a period where developers were not paying enough taxes on new developments (which has been rectified), that is not the catalyst behind our transportation needs. The biggest driver is population growth."
+  answer: "Closing a loophole that did not collect enough taxes from developers has been a positive step, but it is not sufficient to solve our transportation issues."
 
 - question: "Where can I see what projects are being considered for the future?"
   answer: "There are many useful (though occasionally dense) <a href=\"http://gohillsborough.org/useful-documents\" target=\"_blank\">documents on planned projects</a> at GoHillsborough’s website."
