--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 # Site settings
-title: Hillsborough TED Timeline
-tagline: SiteCore Style Guide
+title: TED Timeline
+tagline: Hillsborough County, FL
 description: > # ignore newlines
   Description
 # email: 
