remove hyphens in link names

--- a/_data/ted.yml
+++ b/_data/ted.yml
@@ -221,7 +221,7 @@
   items:
     - item: "Second Parson Brinckerhoff Work Order Approved "
     - item: "Work Order PWGC20150012 is administratively issued by the Hillsborough County Public Works Department for $234,613.43 for continued work by Parsons Brinckerhoff on the Phase 2 community engagement meetings."
-    - item: "[Work Order -](http://www.hillsboroughcounty.org/DocumentCenter/View/16762  )"
+    - item: "[Work Order](http://www.hillsboroughcounty.org/DocumentCenter/View/16762  )"
 
 - date: 2015-07-16-0
   subtitle: "TED PLG Workshop"
@@ -249,7 +249,7 @@
     - item: "PLG receives the Community Transportation Plan Findings and Recommendations from Parsons Brinckerhoff. One-half percent sales tax is presented as the funding option with the majority of public support. "
     - item: "[Agenda](http://agenda.hillsboroughcounty.org/cache/00003/596/Policy%20Leadership%20Agenda%20061115.pdf )"
     - item: "[Presentation – Findings and Recommendations by Bob Clifford, Parsons Brinckerhoff](http://gohillsborough.org/wp-content/uploads/2014/12/Presentation-for-PLG-June-11-FINAL.pdf )"
-    - item: "[Community Transportation Plan -](http://gohillsborough.org/wp-content/uploads/2015/06/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf )"
+    - item: "[Community Transportation Plan](http://gohillsborough.org/wp-content/uploads/2015/06/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf )"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low  )"
 
 - date: 2015-05-21-0
@@ -536,7 +536,7 @@
   items:
     - item: "Additional Funding for the Transportation Initiative "
     - item: "Parsons Brinckerhoff work order is increased to $498,491.15 under County Administrator authority to support data collection and analysis, public engagement, and public meetings, including support by subconsultants Jacobs Engineering and The Leytham Group. "
-    - item: "[Work Order Revision #1 -](http://www.hillsboroughcounty.org/DocumentCenter/View/16763 )"
+    - item: "[Work Order Revision #1](http://www.hillsboroughcounty.org/DocumentCenter/View/16763 )"
 
 - date: 2014-11-11-0
   items:
@@ -560,7 +560,7 @@
   items:
     - item: "Initial Work Order Issued for Parson Brinckerhoff "
     - item: "A $53,234 work order PWGC20140011 is issued by Hillsborough County Public Works Department for work by Parsons Brinckerhoff to continue initial transportation plan development and participate in meetings."
-    - item: "[Work Order -](http://www.hillsboroughcounty.org/DocumentCenter/View/16759 )"
+    - item: "[Work Order](http://www.hillsboroughcounty.org/DocumentCenter/View/16759 )"
 
 - date: 2014-09-05-0
   badge_color: danger
@@ -568,7 +568,7 @@
   items:
     - item: "Direct Select Work Order Requested for Parson Brinckerhoff "
     - item: "Hillsborough County Public Works Department requested the selection of Parsons Brinckerhoff from the list of CCNA contract providers to support the countywide transportation plan initiative. Four firms from CCNA contact were considered."
-    - item: "[Memo -](http://www.hillsboroughcounty.org/DocumentCenter/View/16758)"
+    - item: "[Memo](http://www.hillsboroughcounty.org/DocumentCenter/View/16758)"
 
 - date: 2014-08-12-0
   subtitle: "TED PLG Workshop"
@@ -576,7 +576,7 @@
   badge_icon: cogs
   items:
     - item: "Discussion on the Comprehensive Mobility Proposal. PLG recommends staff engage someone in the private sector with transportation experience to assist with the public discussion process, specifically someone with successful experience in transportation referendums. "
-    - item: "[Proposal Presentation -](http://www.hillsboroughcounty.org/DocumentCenter/View/12876 )"
+    - item: "[Proposal Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/12876 )"
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/12755 )"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/c58b73db-f1d1-4cab-9f3c-2389ba25afc4/Trans_Econ_Dev_WS_8_12_2014/presentation_file/mgpresenter.html?Stream=low )"
 
@@ -679,7 +679,7 @@
   items:
     - item: "Discussion on TED guiding principles and the interrelationship of transportation to key economic spaces."
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9983 )"
-    - item: "[Presentation -](http://www.hillsboroughcounty.org/DocumentCenter/View/10039 )"
+    - item: "[Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/10039 )"
     - item: "[Handout – TED Optimization Strategies](http://www.hillsboroughcounty.org/ DocumentCenter/View/10038 )"
     - item: "[Presentation – Transit Development Plan by Phil Hale, HART CEO](http://www.hillsboroughcounty.org/DocumentCenter/View/10037)"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/0d3b91e7-6801-497b-8fa7-5d4d3e289f7a/Trans_Econ_Dev_WS_11_13_2013/presentation_file/mgpresenter.html?Stream=low)"
