--- a/_data/ted.yml
+++ b/_data/ted.yml
@@ -106,6 +106,8 @@
     - item: "BOCC requested the Hillsborough County Internal Auditor to conduct an independent audit of the GO Hillsborough initiative, to include a procurement and process review of the initiative, and bring back a scope of work at the next Board meeting (Off Agenda Item)."
     - item: "[BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/628/09-16%20Recap%20Memo.pdf){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/3823ffb5-482b-4048-816e-33213a7eeddb/BOCC_Regular_Mtg_9_16_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "7sKytVp7P54"
 
 - date: 2015-09-15-0
   badge_icon: home
@@ -232,6 +234,8 @@
     - item: "[Agenda](http://hillsboroughcounty.org/DocumentCenter/View/16189){:target='_blank'}"
     - item: "[Presentation – Our Challenge, Our Choice by Bob Clifford, Parsons Brinkerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16801){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/217af75f-e379-4d64-8131-0c2ca8c602ff/TED%20Policy%20Group%2007%2016%202015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "yn2SsR1Eec0"
 
 - date: 2015-07-15-0
   badge_color: warning
@@ -251,6 +255,8 @@
     - item: "[Presentation – Findings and Recommendations by Bob Clifford, Parsons Brinckerhoff](http://gohillsborough.org/wp-content/uploads/2014/12/Presentation-for-PLG-June-11-FINAL.pdf){:target='_blank'}"
     - item: "[Community Transportation Plan](http://gohillsborough.org/wp-content/uploads/2015/06/GO-Hillsborough_Community-Transportation-Plan_06-2015.pdf){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/820ebde3-9117-4126-9ee3-8a2b68258fd6/Trans_Econ_Dev_06_11_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "QJiRTjMd6zc"
 
 - date: 2015-05-21-0
   badge_icon: users
@@ -334,6 +340,8 @@
     - item: "[Agenda](http://hillsboroughcounty.org/DocumentCenter/View/16190){:target='_blank'}"
     - item: "[Report](http://gohillsborough.org/wp-content/uploads/2015/04/GoHills_-IO-Report_4-10.pdf){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/53ceb82e-551d-4123-9734-6e36aeef8bc8/Trans_Econ_Dev_PG_4_22_2015A/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "SIsF4kTpxIQ"
 
 - date: 2015-04-21-0
   badge_icon: home
@@ -447,6 +455,8 @@
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14662){:target='_blank'}"
     - item: "[Presentation – GO Hillsborough Community Workshop Series by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14663){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/1cdf6d18-6c62-4495-bdf4-b425ac26ed51/Trans_Econ_Dev_PG_CC_3_5_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "vGe1idkFsJ0"
 
 - date: 2015-03-04-0
   items:
@@ -454,6 +464,8 @@
     - item: "BOCC receives a verbal report from Hillsborough County Internal Auditor and Hillsborough County Clerk of Court’s Audit Department proposing a scope of work for an audit of GO Hillsborough public input (BOCC Agenda Item G1)."
     - item: "[Agenda](http://agenda.hillsboroughcounty.org/cache/00003/567/03-04%20FINAL%20Agenda.pdf){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/82d63fc5-dae3-496a-9d05-555fdcdd04b0/BOCC_Regular_Meeting_3_4_2015_AM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "g4THEMnLwrc"
 
 - date: 2015-03-03-0
   badge_icon: home
@@ -499,6 +511,8 @@
     - item: "[BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/566/02-18%20Recap%20Memo.pdf){:target='_blank'}"
     - item: "[Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/564/F-3.PDF){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/2d9a10d8-57da-444b-997f-6d0be27d8df3/BOCC_Regular_Meeting_2_18_2015_AM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "KI_W65GJwRA"
 
 - date: 2015-02-17-0
   badge_icon: home
@@ -516,6 +530,8 @@
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14661){:target='_blank'}"
     - item: "[Presentation - GO Hillsborough by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14664){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/0f7df348-3aa5-4076-a6d0-659871907e1e/Trans_Econ_Dev_PG_2_12_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "bJVaJl66o8I"
 
 - date: 2015-01-22-0
   badge_color: success
@@ -536,6 +552,8 @@
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/14327){:target='_blank'}"
     - item: "[Presentation – by George Walton, Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/14330){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/3057a3f2-a609-4545-8e27-afe290fdbaff/Trans_Econ_Dev_WS_1_14_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "kdvglsSzIsA"
 
 - date: 2014-11-26-0
   badge_color: success
@@ -560,6 +578,8 @@
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/13545){:target='_blank'}"
     - item: "[Stakeholder/Community presentation series listing](http://www.hillsboroughcounty.org/DocumentCenter/View/16767){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/da6376ce-61e4-43b0-81f5-f91f73424e9d/Trans_Econ_Dev_WS_10_21_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "E73sDG-C8dY"
 
 - date: 2014-09-25-0
   badge_color: success
@@ -586,6 +606,8 @@
     - item: "[Proposal Presentation](http://www.hillsboroughcounty.org/DocumentCenter/View/12876){:target='_blank'}"
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/12755){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/c58b73db-f1d1-4cab-9f3c-2389ba25afc4/Trans_Econ_Dev_WS_8_12_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "5bkxk14T9Cg"
 
 - date: 2014-07-29-0
   items:
@@ -617,6 +639,8 @@
     - item: "[Presentation – Florida Opinion Research Transportation Survey](http://www.hillsboroughcounty.org/DocumentCenter/View/12113){:target='_blank'}"
     - item: "[Presentation – Florida Opinion Research Transportation Survey Crosstabs](http://www.hillsboroughcounty.org/DocumentCenter/View/12115){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/b99ea0ad-447f-4abb-a772-6bf936d4a7de/Trans_Econ_Dev_WS_5_28_2014/presentation_file/mgpresenter.html){:target='_blank'}"
+  videos:
+    - video: "isCqX1Mzf0Y"
 
 - date: 2014-05-12-0
   items:
@@ -637,6 +661,8 @@
     - item: "[Presentation - Update on Competitive Sites Process by Lucia Garsys, Hillsborough County](http://www.hillsboroughcounty.org/DocumentCenter/View/11354){:target='_blank'}"
     - item: "[Potential Project List for Key Economic Spaces](http://www.hillsboroughcounty.org/DocumentCenter/View/11353){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/2f4b11e1-7663-4185-81de-a6ae6de8d460/Trans_Econ_Dev_WS_3_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "NLZXrKSwYkM"
 
 - date: 2014-02-26-0
   subtitle: "TED PLG Workshop"
@@ -648,6 +674,8 @@
     - item: "[Presentation - Review of Key Economic Spaces, clarification of FDOT/TBARTA “Spine,” and update on Competitive Sites Process by Mike Williams, Hillsborough County Transportation Planning and Development, and Jean Duncan, City of Tampa Transportation ](http://www.hillsboroughcounty.org/DocumentCenter/View/11194){:target='_blank'}"
     - item: "[Presentation - Legal Considerations for Governance by Chip Fletcher, Hillsborough County Attorney](http://www.hillsboroughcounty.org/DocumentCenter/View/11192){:target='_blank'}"
     - item: "[Presentation - Public Engagement Options by Eric Johnson, Hillsborough County Strategic Planning](http://65.49.32.144/Hillsborough/a6bda8fa-40d9-4aac-830b-8d5f0c88e888/Trans_Econ_Dev_WS_2_26_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "pc3MK5uEa7I"
 
 - date: 2014-01-15-0
   subtitle: "TED PLG Workshop"
@@ -658,6 +686,8 @@
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/10590){:target='_blank'}"
     - item: "[Presentation - Review of the I-4/I-75, Sable Park, and CSX/Industrial Key Economic Spaces by Mike Williams, Hillsborough County Transportation Planning and Development](http://www.hillsboroughcounty.org/DocumentCenter/View/10620){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/24b9aca5-433e-46bc-9830-83da86e8414b/Trans_Econ_Dev_WS_1_15_2014/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "h2_pibJcP_I"
 
 - date: 2013-12-11-0
   subtitle: "TED PLG Workshop"
@@ -670,6 +700,8 @@
     - item: "[Presentation – Competitive Sites and Transportation by Ron Barton, Hillsborough County Economic Development](http://www.hillsboroughcounty.org/DocumentCenter/View/10564){:target='_blank'}"
     - item: "[Presentation – Long Range Transportation Plan Update by Melissa Zornita, Hillsborough County Planning Commission](http://www.hillsboroughcounty.org/DocumentCenter/View/10563){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/8cf2f77f-41b3-47e0-a65a-ac5ea485a471/Trans_Econ_Dev_WS_12_11_2013/presentation_file/mgpresenter.html){:target='_blank'}"
+  videos:
+    - video: "IrAUwbFw3V8"
 
 - date: 2013-12-02-0
   subtitle: TED Community Conversation Meeting
@@ -690,6 +722,8 @@
     - item: "[Handout – TED Optimization Strategies](http://www.hillsboroughcounty.org/ DocumentCenter/View/10038){:target='_blank'}"
     - item: "[Presentation – Transit Development Plan by Phil Hale, HART CEO](http://www.hillsboroughcounty.org/DocumentCenter/View/10037){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/0d3b91e7-6801-497b-8fa7-5d4d3e289f7a/Trans_Econ_Dev_WS_11_13_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "yj5JY0Si3eM"
 
 - date: 2013-11-04-0
   subtitle: TED Community Conversation Meeting
@@ -710,6 +744,8 @@
   items:
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9554){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/acd4ac46-c3ad-4f02-be24-e3375af9914e/Trans_Econ_Dev_WS_10_09_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "7fWkE7X_b6k"
 
 - date: 2013-10-07-0
   subtitle: TED Community Conversation Meeting
@@ -727,6 +763,8 @@
   items:
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/9035){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/c8ba149b-75d3-4a42-8244-2a7aee0eff70/Transportation__Economic_Dev_09_25_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "JFfFyZTPSRc"
 
 - date: 2013-09-16-0
   subtitle: TED Community Conversation Meeting
@@ -744,6 +782,8 @@
     - item: "Discussion on cost-effective transportation investments to support job growth and public engagement philosophy. "
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16807){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/31b31d5b-6295-46e2-b46c-0bc1946edb54/Trans_Econ_Dev_WS_08_14_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "I2oUeDCY_00"
 
 - date: 2013-08-06-0
   subtitle: TED Community Conversation
@@ -752,6 +792,8 @@
   content: "County Center"
   items:
     - item: "[Watch video](http://65.49.32.144/Hillsborough/77e71539-08b8-4532-89a2-cdae2391b278/Transportation_for_Economic_Dev_PF_08_06_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "Br8Fy4WoV5s"
 
 - date: 2013-07-23-0
   subtitle: "TED PLG Workshop"
@@ -761,6 +803,8 @@
   items:
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16806){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/81704493-df20-4417-b0c8-47fc1db2a94b/Policy__Leadeship_Grp_WS_07_23_2013/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "Wac4nUUqibY"
 
 - date: 2013-05-22-0
   badge_color: danger
@@ -770,6 +814,8 @@
     - item: "The PLG is established and comprised of Hillsborough County Commissioners; the mayors of Plant City, Tampa, and Temple Terrace; and the chair of Hillsborough Area Regional Transit Authority (HART).  "
     - item: "[Agenda](http://www.hillsboroughcounty.org/DocumentCenter/View/16808){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/7253585a-c22d-4af8-a4c9-58111a6a7021/Econ_Econ_Policy_Group_Mtg_05_22_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "YhOK9JlFlrQ"
 
 - date: 2013-05-15-0
   items:
@@ -778,6 +824,8 @@
     - item: "[BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/363/05-15%20Recap%20Memo.pdf){:target='_blank'}"
     - item: "[Strategic Plan](http://www.hillsboroughcounty.org/index.aspx?nid=3070){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/eeba8991-744f-485e-983c-6dae8c4f6b00/BOCC_Reg_Mtg_05_15_2013_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "ctFgcjKGLhU"
 
 - date: 2012-06-06-0
   items:
@@ -787,3 +835,5 @@
     - item: "[Agenda Item](http://agenda.hillsboroughcounty.org/cache/00003/241/B-1.PDF){:target='_blank'}"
     - item: "[2012 CCNA Contract Award Letter to Parsons Brinckerhoff](http://www.hillsboroughcounty.org/DocumentCenter/View/16756){:target='_blank'}"
     - item: "[Watch video](http://65.49.32.144/Hillsborough/6ee4479b-48a8-4cd2-a5ed-92d770d4a27c/BOCC_Reg_Mtg_06_06_2012_PM/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+  videos:
+    - video: "-o7W3ufP8mA"  
