--- a/_data/ted.yml
+++ b/_data/ted.yml
@@ -14,6 +14,15 @@
   items:
     - item: "Project Specifics Open House Public Workshop at Bloomingdale Regional Library"
 
+- date: 2015-10-07-0
+  badge_icon: exclamation
+  badge_color: warning
+  items:
+    - item: "BOCC postponed conducting audit of the Go Hillsborough initiative until the Sheriff's Office completes its investigation."
+    - item: "BOCC requested a transportation workshop be held on Nov. 5 following the PLG meeting to discuss mobility fees, funding options, the final transportation report from Parsons Brinckerhoff, possible referendum language, and options for an oversight committee."
+    - item: "[BOCC Recap Memo](http://agenda.hillsboroughcounty.org/cache/00003/632/B-2.PDF)"
+    - item: "[Watch video](http://65.49.32.144/Hillsborough/53fb946c-27a3-4d2c-8900-02904fcd80fa/BOCC_Regular_Mtg_10_7_PM_2015/presentation_file/mgpresenter.html?Stream=low)"
+
 - date: 2015-10-06-0
   badge_icon: home
   items:
