--- a/_data/ted.yml
+++ b/_data/ted.yml
@@ -1,3 +1,10 @@
+- date: 2015-11-05-0
+  badge_color: info
+  badge_icon: cogs
+  items:
+    - item: "The Policy Leadership Group recommended that a half-percent sales tax referendum to fund county-wide transportation improvements be considered by the Board of County Commissioners."
+    - item: "[Watch video](http://65.49.32.144/Hillsborough/4bc65413-4175-49a7-8fb6-6e103cf2d7c9/TED_Policy_Group_11_5_2015/presentation_file/mgpresenter.html?Stream=low){:target='_blank'}"
+
 - date: 2015-10-15-0
   badge_icon: home
   items:
