--- a/_data/menu_nav.yml
+++ b/_data/menu_nav.yml
@@ -1,3 +1,7 @@
-- title: "Home"
-  href: "#"
-  class: 
+# - title: "Home"
+#   href: "/"
+#   class:
+
+- title: "TED"
+  href: "http://Hillsboroughcounty.org/ted"
+  class:
