--- a/_config.yml
+++ b/_config.yml
@@ -3,6 +3,8 @@ title: Actions on the Transportation Initiative
 tagline: Hillsborough County, FL
 google_analytics: UA-63036279-4
 
+future: true
+
 baseurl: ""
 url: "http://ted.hillsboroughcdms.org"
 # paginate: 10
